# streaming-lab

./: .gitignore  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
_materials/flink-reference/: event_model_original.py
_materials/flink-reference/jobs/: analytics_aggregation_job.py  realtime_metrics_job.py  session_processing_job.py
docker/clickhouse/: init.sql  users.xml
docs/: FINDINGS.md  roadmap.md
docs/decisions/: 000-repo-name.md  001-offset-in-snapshot-vs-external-checkpoint.md  002-watermark-rollback-strategy.md  003-why-append-only.md  004-python-consumer-vs-flink.md
docs/phases/: phase-1-plan.md
gateway/: README.md  async_kafka_producer.py  events_api_original.py  requirements.txt
scripts/: bootstrap.py
src/streaming_lab/: __init__.py  config.py
src/streaming_lab/events/: admin.py  generator.py  ground_truth.py  schema.py
src/streaming_lab/lake/: catalog.py  landing_job.py  watermark.py
src/streaming_lab/naive_mode/: README.md  __init__.py  hybrid_source_of_truth.py  multi_tier_storage.py
src/streaming_lab/query/: seam.py  service.py
src/streaming_lab/realtime/: clickhouse.py
tests/: conftest.py  test_correctness_crash_restart.py  test_correctness_no_dup_no_loss.py  test_watermark_safety.py  test_watermark_unit.py
