[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming-lab"
version = "0.1.0"
description = "Distributed correctness lab: Kafka -> ClickHouse + Iceberg, then attack it."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --timeout=300"
markers = ["integration: requires docker-compose stack up"]
